# panar

./: Cargo.toml  deny.toml  panar.service
.github/workflows/: rust.yml
src/: lib.rs  main.rs
