[package]
name = "panar"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
miltr-server = "0.2"
miltr-common = "0.1.3"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "fmt"] }
