[package]
name = "panar"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
clap = { version = "4.5", features = ["derive"] }
mail-auth = { git = "https://github.com/djc/mail-auth", branch = "rsa-pkcs8",  default-features = false, features = ["ring"] }
miltr-server = "0.2"
miltr-common = "0.1.3"
rustls-pki-types = "1.13.2"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
toml = "0.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "fmt"] }
